src/Components.css
#navbar {
    direction: rtl;
}



.navbar-nav {
    width: 100%;
    /* align-content: space-around; */
}





#example-search-input4{
    margin: 0;
    width: 100%;
    /* border-radius: 20px; */
}

#search-bar-outline{
    border: 2vh;
    border: black;
    border-left: none;
    
}

#search-bar-outline{
    display: flex;
    width: 100%;
}
#stretcher{
    width: 70%;

}

#logo{
    height: 70px;
}

#search-form{
    max-width: 70%;
}


#search-btn{
    display: flex;
    align-items: center;
    width: 100%;
    float: left;
    background-color: rgba(165, 4, 165, 0);
    border: none;

}
#clear-btn{
    background-color: rgba(255, 255, 255, 0);
    border: none;
    margin: auto;
    margin-right:-8%;
   
}

.nav-item{
/* justify-content:space-evenly ; */
    margin-left: 5px;
}
.nav-link{
    /* box-sizing: content-box; */
    /* height: 200px; */
    color: white;
}

#search-icon{
    position: absolute;
    left:12px;
}
.navbar-light .navbar-nav .nav-link{
    color: white;
}

#fblogo,#ytlogo{
    height: 50px;
    width: 50px;
}
#pictureCarousel {
    position: absolute;
    width: 50%;
    height: 30%;
    left: 25%;
    margin-top: 3%;
}

img {
    border-radius: 3%;
}

